--- a/src/Styles/Sidebar.css
+++ b/src/Styles/Sidebar.css
@@ -1,45 +1,57 @@
+
+
+.container{
+    position: absolute;
+    display: flex;
+    
+    
+    
+    
+   
+    
+}
+
+main{
+    width: 100%;
+    padding: 10px;
+    padding-top: 20px;
+    padding-left: 40px;
+
+    
+  
+    
+}
+
 .sidebar{
+    
     background: #ffffff;
-    color: #fff;
-    height: 86vh;
-    min-width: none;
+    color: #000000;
+    height: 93.7vh;
     transition: all 0.5s;
-    /* margin-left: -310px;  */
+    margin-left: -12px;
     
 }
 .top_section{
     display: flex;
     align-items:center;
-    flex-direction: column;
     padding:20px 15px;
 }
 .logo{
-    font-size: 23px;
-    color: #000000;
-   
+    font-size: 30px;
 }
 .bars{
-    position: absolute;
     display: flex;
-    font-size: 35px;
-    margin-left: 200px;
-    color: #4f64ff;
-    transition: all 0.5s;
-    
-  
+    font-size: 25px;
+    margin-left: 50px;
 }
-
-
 .link{
-
-    margin-top: 20px;
-    text-decoration: none;
     display: flex;
     color: #000000;
     padding: 10px 15px;
-    gap: 6px;
+    gap: 15px;
     transition: all 0.5s;
-    
+    text-decoration: none;
+    top: 100px;
 }
 .link:hover{
     background:lightskyblue;
@@ -51,20 +63,12 @@
     color: #000;
 }
 .icon, .link_text{
-
-    font-size: 22px;
-    margin-left: 15px;
+    font-size: 20px;
 }
 
-
-
-
-@media only screen and (max-width: 1024px) {
-
-    .sidebar{
-      
-        margin-left: -10px;
-    }
-	
-   
+.bars{
+    font-size: 33px;
+    transition: all 0.5s;
+    
 }
+
