--- a/src/Styles/header.css
+++ b/src/Styles/header.css
@@ -1,17 +1,27 @@
+.bg-primary{
+ position: relative;
+ height: 60px;
+ width: 100%;
+
+}
+
+
 .logo-title{
     display: flex;
     color: white; 
     font-family: sans-serif;
-    margin-left: -270px;
+    margin-left: 20px;
+    padding-top: 10px;
+    padding-bottom: 8px;
 }
 
 .logo-title1{
     font-weight: 700;
-    font-size: 35px;
+    font-size: 32px;
 }
 .logo-title2{
     font-weight: 700;
-    font-size: 18px;
+    font-size: 16px;
     margin-top: -10px;
 }
 
@@ -28,3 +38,6 @@
 	
    
 }
+
+
+
