--- a/src/Styles/Cards.css
+++ b/src/Styles/Cards.css
@@ -29,7 +29,7 @@
     font-size: 25px;
     padding: 5px;
     text-align: center;
-    background-color: aqua;
+    background-color: rgb(87, 153, 246);
     border-top-left-radius: 7px;
     border-top-right-radius: 7px;
     
